--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.3",
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.11",
+    "puppeteer": "^1.19.0",
     "superagent": "^5.0.3",
     "superagent-charset": "^1.2.0"
   }
