--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.18.11"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "fs-extra": "^9.0.1",
     "iconv-lite": "^0.4.24",
