--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "fs-extra": "^8.1.0",
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.11",
     "puppeteer": "^1.19.0",
