--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "iconv-lite": "^0.4.24",
     "inspector-proxy": "^1.2.1",
     "lodash": "^4.17.11",
+    "n-readlines": "^1.0.1",
     "puppeteer": "^1.19.0",
     "superagent": "^5.0.3",
     "superagent-charset": "^1.2.0"
