--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
+    "dayjs": "^1.10.4",
     "fs-extra": "^9.0.1",
     "iconv-lite": "^0.4.24",
     "inspector-proxy": "^1.2.1",
