--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.11",
     "n-readlines": "^1.0.1",
     "puppeteer": "^1.19.0",
+    "request": "^2.88.2",
     "superagent": "^5.0.3",
     "superagent-charset": "^1.2.0"
   }
