--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "node ./src/jijin/index.js",
+    "mon": "nodemon index.js",
+    "es": "babel-node ./src/jijin/index.es.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.11",
+    "@babel/core": "^7.16.0",
     "@babel/node": "^7.15.8",
-    "@babel/preset-env": "^7.16.0"
+    "@babel/preset-env": "^7.16.0",
+    "nodemon": "^1.18.11"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.3",
     "dayjs": "^1.10.4",
+    "esno": "^0.14.1",
     "fs-extra": "^9.0.1",
     "iconv-lite": "^0.4.24",
+    "images": "^3.2.4",
     "inspector-proxy": "^1.2.1",
     "lodash": "^4.17.11",
+    "lowdb": "^3.0.0",
     "n-readlines": "^1.0.1",
     "puppeteer": "^1.20.0",
     "request": "^2.88.2",
